[gd_scene load_steps=2 format=3 uid="uid://defensive_queue_icon_scene"]

[ext_resource type="Script" path="res://scripts/ui/defensive_queue_icon.gd" id="1"]

[node name="DefensiveQueueIcon" type="Control"]
custom_minimum_size = Vector2(24, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 24.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="IconBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="IconLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 14
text = "R"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnhancedBorder" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 26.0
grow_horizontal = 2
mouse_filter = 2
color = Color(1, 0.9, 0.3, 0.8)

[node name="TimerBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 4)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 26.0
offset_bottom = 30.0
grow_horizontal = 2
max_value = 2.0
value = 2.0
show_percentage = false

[node name="AbsorbCounter" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
